# pharma-vigilance-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  agent.py  client.py  data.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_demo.py  server.py  tasks.py
server/: __init__.py  app.py  graders.py  pharma_vigilance_env_environment.py  requirements.txt  tasks.py
tests/: test_env.py
