[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmacovigilance-env"
version = "1.0.0"
description = "Pharmacovigilance Signal Detector"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["env", "tasks", "data", "inference"]
packages = ["server"]
